<resources>
    <string name="app_name">LNDW App</string>
    <string name="choosechars">Choose Characters</string>
    <string name="charactername">Character name</string>
    <string name="abilities">Abilities:</string>
    <string name="charview">View Character</string>
    <string name="round">Round</string>
    <string name="D">Villagers</string>
    <string name="Dieb">Thief</string>
    <string name="Mädchen">Little Girl</string>
    <string name="Hexe">Witch</string>
    <string name="Dorfbewohner">Villager</string>
    <string name="Werwolf">Werewolf</string>
    <string name="Bischof">Bishop</string>
    <string name="Freimaurer">Freemasons</string>
    <string name="Engel">Angel</string>
    <string name="Prostituierte">Prostitute</string>
    <string name="Hirte">Shepard</string>
    <string name="Zauberer">Magician</string>
    <string name="Detektiv">Detective</string>
    <string name="Bürgermeister">Major</string>
    <string name="W">Werewolves</string>
    <string name="F">Flautist</string>
    <string name="E">Lonely Wolf</string>
    <string name="U">Undecided</string>
    <string name="V">Vampires</string>
    <string name="VL">Lovers</string>
    <string name="available">Available</string>
    <string name="notavailable">Not available</string>
    <string name="awakens">awakens!</string>
    <string name="won">won!</string>
    <string name="villagers">Villagers</string>
    <string name="wolves">Werewolves</string>
    <string name="lovers">Lovers</string>
    <string name="ewolve">Lonely Wolve</string>
    <string name="flute">Fluteplayer</string>
    <string name="players">Players:</string>
    <string name="kill">Kill</string>
    <string name="intro">Night falls on Düsterwald</string>
    <string name="introtext">All citizens go to sleep, waiting for the mysterious things happening at night</string>
    <string name="congrattext">Congratulations!</string>
    <string name="details">Details</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inlove">In Love:</string>
    <string name="enchanted">Enchanted</string>
    <string name="group">Group</string>
    <string name="protection">Protected</string>
    <string name="useAbility">Use</string>
    <string name="startfailed">Start Failed</string>
    <string name="nocards">No enough cards added!\n You need at least</string>
    <string name="nocards2"> cards to start the game!</string>
    <string name="onefraction">Only one group has been added.\n Please choose at least a second group!</string>
    <string name="dependency">needs to be inserted to play!</string>
    <string name="outro">The night has come to an end, but has everyone survived this night?</string>
    <string name="outrotext">All players awake again and will be told the victims of this night</string>
    <string name="extracards">Extra cards:</string>
    <string name="ChooseCharsStartGame">Start Game</string>
    <string name="nextround">Next Round</string>
    <string name="about">About…</string>
    <string name="copyright">Copyright by Timo Homburg\n Released under GPL</string>
    <string name="roundtitle">Round finished - Who died?</string>
    <string name="amount">Amount</string>
    <string name="results">Results</string>
    <string name="statistics">Statistics</string>
    <string name="grantpoints">Grant points</string>
    <string name="img">img</string>
    <string name="description">Description:</string>
    <string name="points">Points:</string>
    <string name="statview">Statistics</string>
    <string name="everyXRound">Every Xth round</string>
    <string name="noround">Never called</string>
    <string name="everyRound">Every round</string>
    <string name="xround">In the xth round</string>
    <string name="minamount">Minimum amount</string>
    <string name="maxamount">Maximum amount</string>
    <string name="extra">Extra cards</string>
    <string name="editchar">Edit character</string>
    <string name="call">Called:</string>
    <string name="xroundview1">In the </string>
    <string name="xroundview2">th round</string>
    <string name="xroundview3">In every </string>
    <string name="xroundview4">th round</string>
    <string name="unbounded">unbounded</string>
    <string name="event"><b>Event:</b></string>
    <string name="position">Position</string>
    <string name="parentDirectory">Parent Dir</string>
    <string name="fileSize">File Size</string>
    <string name="folder">Folder</string>
    <string name="currentDir">Current Dir</string>
    <string name="welcome">Welcome to LNDW App!</string>
    <string name="nopoints">No points</string>
    <string name="fixeddeath">Death of the character at a fixed time:</string>
    <string name="cannotwin">Cannot win the game</string>
    <string name="options">Options:</string>
    <string name="use">Use</string>
    <string name="eventdescription">Event description</string>
    <string name="eventTitle">Event title</string>
    <string name="itemtitle">Item title</string>
    <string name="itemDescription">Item description</string>
    <string name="abilityDescription">Ability Description</string>
    <string name="abilityAmount">Ability Amount</string>
    <string name="availableFrom">Available from</string>
    <string name="active">Active</string>
    <string name="availableUntil">Available Until</string>
    <string name="editability">Edit Ability</string>
    <string name="addAbility">Add Ability</string>
    <string name="rearrangePositions">Rearrange</string>
    <string name="editposition">Edit Position</string>
    <string name="savegame">Save Game</string>
    <string name="calleveryone">Call Everyone</string>
    <string name="probability">Probability(%)</string>
    <string name="game">Game</string>
    <string name="playername">Player Name</string>
    <string name="firstname">First name</string>
    <string name="ok">OK</string>
    <string name="addplayer">Add player</string>
    <string name="playerview">Players</string>
    <string name="saveplayer">Save Player</string>
    <string name="saveEvent">Save Event</string>
    <string name="likelihood">Likelihood(%)</string>
    <string name="saveitem">Save Item</string>
    <string name="addevent">Add Event</string>
    <string name="additem">Add Item</string>
    <string name="permanent">Permanent</string>
    <string name="onetime">One Time</string>
    <string name="editevent">Edit Event</string>
    <string name="edititem">Edit Item</string>
    <string name="eventview">Event View</string>
    <string name="itemview">Items</string>
    <string name="setview">GameSets</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="addchar">Add Character</string>
    <string name="saveability">Save Ability</string>
    <string name="remove">Remove</string>
    <string name="editplayer">Edit Player</string>
    <string name="gameset">GameSets</string>
<string name="editevents">Edit Events</string>
<string name="editchars">Edit Characters</string>
    <string name="pick_char">Choose Char</string>
    <string name="pick_player">Choose Player</string>
    <string name="cancel">Cancel</string>
<string name="limitedAmount">Limited Amount</string>
<string name="minplayers">Minimum Players</string>
<string name="maxplayers">Maximum Players</string>
<string name="gamesetname">GameSet Name</string>
    <string name="addgameset">Add Gameset</string>
    <string name="editgameset">Edit GameSet</string>
    <string name="savepreset">Save Selection as Preset</string>
    <string name="openpreset">Open Preset</string>
<string name="concerns">Concerns</string>
<string name="mustuse">Must use ability</string>
<string name="showevent">Show Event</string>
<string name="duration">Duration</string>
    <string name="chooseextracards">Choose Extracards</string>
    <string name="notpositioned">not positioned! Please position it using the corresponding menu!</string>
    <string name="notenoughchosenchars">Not enough chars chosen!</string>
    <string name="reallykill">Really kill</string>
<string name="finish">Finish</string>
    <string name="switchchar">Switch Character</string>
    <string name="deadcards">Dead Characters</string>
    <string name="round2">Round2</string>
    <string name="presetsaved">Preset Saved</string>
    <string name="nopresetsave">Preset could not be saved</string>
    <string name="choosepreset">Choose Preset</string>
    <string name="nopresets">No presets available!</string>
    <string name="needsdeadchars">Needs dead chars</string>
    <string name="loadgame">Load Game</string>
<string name="winsalone">Wins alone</string>
    <string name="gamesaved">Game saved!</string>
<string name="winningalivepoints">Winning points when alive</string>
<string name="winningpointsdead">Winning points when dead</string>
    <string name="balancevalue">Balance Value</string>
    <string name="hasbalance">Has Balance Value</string>
    <string name="gamesetimg">GameSet Image</string>
    <string name="syncurl">Synchronisation URL</string>
    <string name="downloadgameset">Download GameSet</string>
    <string name="noconnection">No Internet Connection Available</string>
    <string name="chooseability">Choose Ability</string>
    <string name="syncplayers">Synchronize Players</string>
    <string name="playerssynchronized">Players successfully synchronized</string>
    <string name="syncfailed">Synchronizing failed</string>
    <string name="sendgameresults">Send Game Results</string>
    <string name="choosegroup">Choose Group</string>
    <string name="novalidpreset">No valid Preset</string>
    <string name="abilitydelay">Ability Delay</string>
    <string name="killingability">Killing Ability</string>
    <string name="counterkillingability">Counterkilling Ability</string>
    <string name="self">Use on Self</string>
    <string name="changegroup">Change Group</string>
    <string name="deathdelay">Death Delay</string>
    <string name="switchnewchar">Switch to new Character</string>
    <string name="cannotbechosenbecauseofalwayschooseother">Selection invalid. You need to chose a character not having
        been chosen last time.
    </string>
    <string name="abilityondead">Ability on character death</string>
    <string name="ondeadability">Character needs to execute the following ability before dying:</string>
    <string name="presetname">Enter Presetname</string>
    <string name="savegamedialog">Enter the name of your SaveGame</string>
    <string name="savegroup">Save Group</string>
    <string name="groupname">Group Name</string>
    <string name="groupidentifier">Group Identifier</string>
    <string name="groupdescription">Group Description</string>
    <string name="groupwinsgame">Can win the game</string>
    <string name="editgroup">Edit Group</string>
    <string name="groups">Groups</string>
    <string name="addgroup">Add Group</string>
    <string name="editgroups">Edit Groups</string>
    <string name="editGroup">Edit Group</string>
    <string name="removeGroup">Delete Group</string>
    <string name="showgamelog">Show Gamelog</string>
    <string name="uses">uses</string>
    <string name="on">on</string>
    <string name="tochangeto">als Tausch zu</string>
    <string name="secondarygroup">Secondary Group</string>
    <string name="abilityImg">Ability Icon</string>
    <string name="playerins">Player Instruction</string>
    <string name="gamemasterins">GameMaster Instructions</string>
    <string name="introtitle">Introtitle</string>
    <string name="outrotitle">Outrotitle</string>
    <string name="editoutrotext">Outrotext</string>
    <string name="editintrotext">Introtext</string>
    <string name="backimg">Back Image</string>
    <string name="saveaction">Aktion speichern</string>
    <string name="gamemaster">Spielleiter</string>
    <string name="player">Spieler</string>
    <string name="ondead">Beim Tode</string>
</resources>