<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      xmlns:app="http://schemas.android.com/apk/res-auto"
              app:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" app:columnCount="3">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamesetname"
            android:id="@+id/gameSetNameTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editGameSetName" android:inputType="text" app:layout_column="0"
            app:layout_columnSpan="2" app:layout_row="1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minplayers"
            android:id="@+id/minPlayersTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editGameSetMinPlayers" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxplayers"
            android:id="@+id/maxPlayersTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="4"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editGameSetMaxPlayers" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introtitle"
            android:id="@+id/introTitleTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="6"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editGameSetIntroTitle" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="7"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editintrotext"
            android:id="@+id/introTextTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="8"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editGameSetIntroText" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="9"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outrotitle"
            android:id="@+id/outroTitleTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="10"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editGameSetOutroTitle" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="11"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editoutrotext"
            android:id="@+id/outroTextTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="12"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editGameSetOutroText" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="13"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasbalance"
            android:id="@+id/editGameSetHasBalance" app:layout_row="14" app:layout_column="0"
            app:layout_columnSpan="1" app:layout_rowSpan="1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamesetimg"
            android:id="@+id/editGameSetImgTextView" app:layout_row="15" app:layout_column="0"
            app:layout_rowSpan="1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backimg"
            android:id="@+id/editGameSetImgTextView2" app:layout_row="15" app:layout_column="1"
            app:layout_gravity="bottom|right"
            app:layout_rowSpan="1"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editGameSetImgView" android:src="@drawable/title" app:layout_column="0"
            app:layout_columnSpan="1" app:layout_row="16" app:layout_gravity="left"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editGameSetBackImgView" android:src="@drawable/back" app:layout_column="1"
            app:layout_columnSpan="1" app:layout_row="16" app:layout_gravity="bottom|right"/>
</android.support.v7.widget.GridLayout>
    </ScrollView>