<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
              app:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" app:columnCount="2">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupNameTextView" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="0" android:text="@string/groupname"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupName"
            android:inputType="textCapWords" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="1"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupIdentifierText" app:layout_column="0" app:layout_columnSpan="2"
            app:layout_row="2" android:text="@string/groupidentifier"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupIdentifier" android:maxLength="2" android:inputType="text"
            app:layout_column="0" app:layout_columnSpan="2" app:layout_row="3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupdescription"
            android:id="@+id/editGroupDescriptionText" app:layout_column="0" app:layout_columnSpan="2" app:layout_row="4"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupDescription" android:inputType="textMultiLine" app:layout_column="0"
            app:layout_columnSpan="1" app:layout_row="5"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupwinsgame"
            android:id="@+id/editGroupWinsGameCB" app:layout_column="0" app:layout_columnSpan="1"
            app:layout_row="6"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondarygroup"
            android:id="@+id/editGroupSecondaryCB" app:layout_column="0" app:layout_columnSpan="1"
            app:layout_row="7"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editGroupimageView" app:layout_column="1" app:layout_columnSpan="1" app:layout_row="6"
            android:contentDescription="editgroupimageview" android:background="@color/Gold" android:src="@drawable/heart"
            app:layout_gravity="left" app:layout_rowSpan="2"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savegroup"
            android:id="@+id/saveGroupButton" app:layout_row="8" app:layout_column="0"/>
</android.support.v7.widget.GridLayout>
    </ScrollView>